# javalang-py

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  decision.md  feature.md
.github/workflows/: ci.yml
docs/: adaptacoes.md  auditoria.md  itens-de-configuracao.md  plano-implementacao.md  uso-de-ia.md
docs/adr/: 0001-modelo-branches-e-prs.md  0002-convencao-nomenclatura.md
docs/relatorios/: status-v0.1.md  status-v0.2.md  status-v0.3.md  status-v0.4.md  status-v1.0.md
javalang/: __init__.py  jfloat.py  jinteger.py  jstring.py
tests/: test_jfloat.py  test_jinteger.py  test_jstring.py
